k8s/helm/scylla-manager-helm.yaml
---
# Source: scylla-manager/templates/manager_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: scylla-manager
  name: scylla-manager-and-scylla-operator-to-scylla-pod
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: scylla-operator
      app.kubernetes.io/name: scylla
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: scylla-manager
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: scylla-operator
---
# Source: scylla-manager/templates/manager_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: scylla-manager
    app.kubernetes.io/instance: scylla-manager
  name: scylla-manager
  namespace: scylla-manager
spec:
  ports:
  - name: api
    port: 80
    protocol: TCP
    targetPort: 5080
  - name: metrics
    port: 5090
    protocol: TCP
    targetPort: 5090
  selector:
    app.kubernetes.io/name: scylla-manager
    app.kubernetes.io/instance: scylla-manager
---
# Source: scylla-manager/templates/manager_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scylla-manager
  namespace: scylla-manager
  labels:
    app.kubernetes.io/name: scylla-manager
    app.kubernetes.io/instance: scylla-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: scylla-manager
      app.kubernetes.io/instance: scylla-manager
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scylla-manager
        app.kubernetes.io/instance: scylla-manager
    spec:
      serviceAccountName: scylla-manager
      containers:
      - name: scylla-manager
        image: scylladb/scylla-manager:3.12.1@sha256:3ec70ef48c31bae76472a1422c64946782b884c36aa3fad0ce69791c47a26370
        imagePullPolicy: IfNotPresent
        command:
        - /usr/bin/scylla-manager
        args:
        - --config-file=/mnt/etc/scylla-manager/scylla-manager.yaml
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        volumeMounts:
        - mountPath: /mnt/etc/scylla-manager
          name: scylla-manager-config
        readinessProbe:
          httpGet:
            path: /api/v1/clusters
            port: 5080
          periodSeconds: 10
          timeoutSeconds: 3
      volumes:
      - configMap:
          name: scylla-manager-config
        name: scylla-manager-config
